// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SidebarElement > sidebar group 1`] = `
<div>
  <div
    class="aside-element"
  >
    <img
      alt="suggested group avatar image"
      src="/group-1.jpg"
    />
    <h3>
      Frontend Group
    </h3>
    <span>
      128
    </span>
  </div>
</div>
`;

exports[`SidebarElement > sidebar user 1`] = `
<div>
  <div
    class="aside-element"
  >
    <img
      alt="suggested user avatar image"
      src="/user.png"
    />
    <h3>
      Helena
       
      Stone
    </h3>
    <span>
      @
      helena
    </span>
  </div>
</div>
`;
